<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/design_default_color_secondary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myprofile"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="190dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="281dp"
        android:background="#F8F8F8"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_name"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="68dp"
                android:layout_height="20dp"
                android:text="@string/username"
                app:layout_constraintBottom_toTopOf="@+id/editTextText"
                app:layout_constraintStart_toStartOf="@+id/editTextText" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwork"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_name"
                android:ems="10"
                android:hint="@string/passwork"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextText"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextText"
                app:layout_constraintTop_toBottomOf="@+id/editTextText" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="410dp"
        android:layout_height="81dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="71dp"
                android:layout_height="0dp"
                android:background="#F5F4F2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="86dp"
                android:layout_height="81dp"
                android:background="#F6F5F3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_gmail" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="89dp"
                android:layout_height="81dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.535"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_instagram" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="91dp"
        android:layout_marginTop="16dp"
        android:background="#03D9C5"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="57dp"
                android:layout_height="56dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_home" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/imageButton3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageButton3"
                app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="25dp"
                app:layout_constraintEnd_toStartOf="@+id/imageButton5"
                app:layout_constraintHorizontal_bias="0.415"
                app:layout_constraintStart_toEndOf="@+id/imageButton3"
                app:layout_constraintTop_toTopOf="@+id/imageButton3"
                app:srcCompat="@drawable/ic_cart" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/imageButton4"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/imageButton4"
                app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="58dp"
                android:layout_height="56dp"
                android:layout_marginEnd="44dp"
                app:layout_constraintEnd_toStartOf="@+id/imageButton6"
                app:layout_constraintTop_toTopOf="@+id/imageButton4"
                app:srcCompat="@drawable/ic_profile" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/imageButton5"
                app:layout_constraintStart_toStartOf="@+id/imageButton5"
                app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="55dp"
                android:layout_height="58dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageButton5"
                app:srcCompat="@drawable/ic_save" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="save"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/imageButton6"
                app:layout_constraintStart_toStartOf="@+id/imageButton6"
                app:layout_constraintTop_toBottomOf="@+id/imageButton6" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>